[package]
name = "actix-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://stackoverflow.com/a/69942705/10503012
actix-web = { version = "4.0.0-beta.10" }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
dotenv = "0.15.0"
serde = { version = "1.0.117", features = ["derive"] }
